# javelin-steno-rp2040

./: CMakeLists.txt  README.md  auto_draw.cc  auto_draw.h  bootrom.cc  bootrom.h  console_buffer.cc  console_buffer.h  console_input_buffer.cc  console_input_buffer.h  console_report_buffer.cc  console_report_buffer.h  encoder_pins.h  flash.cc  font.cc  font.h  hid_keyboard_report_builder.cc  hid_keyboard_report_builder.h  hid_report_buffer.cc  hid_report_buffer.h  key_state.cc  key_state.h  libc_overrides.cc  libc_stubs.cc  main.cc  main_report_builder.cc  main_report_builder.h  main_task.cc  main_task.h  pico_bindings.cc  pico_bootloader.cc  pico_button_state.cc  pico_button_state.h  pico_clock.cc  pico_console.cc  pico_crc.cc  pico_crc.h  pico_crc32.cc  pico_crc32.h  pico_divider.h  (+73 more)
config/: asterisk.h  asterisk_pre_kickstarter.h  crkbd.h  crkbd_pair.h  crkbd_v3.h  crkbd_v3_pair.h  crkbd_v4.h  crkbd_v4_pair.h  ecosteno_v2.h  kyria_rev3.h  kyria_rev3_pair.h  kyria_rev3_right.h  kyria_rev4.cc  kyria_rev4.h  kyria_rev4_pair.h  main_flash_layout.h  multisteno_v2.h  pair_flash_layout.h  polyglot.h  starboard.h  uni_v4.h  uni_v4.javelin-script  uni_v4_mac_tool_layer.javelin-script
font/: default.cc  large_digits.cc  medium_digits.cc  small_digits.cc
uniV4/: config.h
